examples/https-termination/certificate-ns-and-cafe-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: certificate
